[gd_scene load_steps=3 format=3 uid="uid://bkbco8j8tbbwl"]

[ext_resource type="Texture2D" uid="uid://82sxud1wiqmb" path="res://icon.svg" id="1_m1s7i"]
[ext_resource type="Script" path="res://ui/deathNerfController.gd" id="1_qmcym"]

[node name="Death Nerf Chooser" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qmcym")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 429.0
offset_top = 30.0
offset_right = -429.0
offset_bottom = -568.0
grow_horizontal = 2
text = "Its not too late to be brought back. . .
    But not without its consequences."

[node name="Option1" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 84.0
offset_top = 186.0
offset_right = -796.0
offset_bottom = -143.0

[node name="TextureButton" type="Button" parent="Option1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Option1"]
position = Vector2(123, 82)
texture = ExtResource("1_m1s7i")

[node name="RichTextLabel" type="RichTextLabel" parent="Option1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 165.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
text = "Choice 1:

choice 1 text"

[node name="Option2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 429.0
offset_top = 186.0
offset_right = -451.0
offset_bottom = -143.0

[node name="TextureButton" type="Button" parent="Option2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Option2"]
position = Vector2(123, 82)
texture = ExtResource("1_m1s7i")

[node name="RichTextLabel" type="RichTextLabel" parent="Option2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 170.0
offset_right = -15.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
text = "Choice 2:

choice 2 text"

[node name="Option3" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 774.0
offset_top = 186.0
offset_right = -106.0
offset_bottom = -143.0

[node name="TextureButton" type="Button" parent="Option3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Option3"]
position = Vector2(123, 82)
texture = ExtResource("1_m1s7i")

[node name="RichTextLabel" type="RichTextLabel" parent="Option3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 173.0
offset_right = -11.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
text = "Choice 3:

choice 3 text"

[connection signal="button_down" from="Option1/TextureButton" to="." method="option1Chosen"]
[connection signal="button_down" from="Option2/TextureButton" to="." method="option2Chosen"]
[connection signal="button_down" from="Option3/TextureButton" to="." method="option3Chosen"]
